<resources>
    <string name="app_name">WMSAPLICATION</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="SCAN">Scan</string>
    <string name="Scan">Scan\n</string>
    <string name="multiplier">X</string>
    <string name="Inbond">In bond</string>
    <string name="Nacional">Nacional</string>
    <string name="ingreso_de_producto">Ingreso de Producto</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="confirmar">Confirmar</string>
    <string name="escanear_c_digo">Código</string>
    <string name="brand">Elite</string>
    <string name="prductname">Taladro</string>
    <string name="weight">50</string>
    <string name="marca">Marca</string>
    <string name="peso">Peso</string>
    <string name="barcode">Código de Barra</string>
    <string name="volume">Volume</string>
    <string name="serialcode">Código de Serial</string>
    <string name="volumen">0x0x0</string>
    <string name="n">pendiente\n</string>
    <string name="numb">number</string>
    <string name="OrdenIngreso">Orden de Ingreso: </string>
    <string name="OrdenIdent">0000</string>
    <string name="TotalLength">Total productos: </string>
    <string name="LngitudPedidoO">100</string>
    <string name="ScannerB">Código</string>
    <string name="Confirmar">Confirmar</string>
    <string name="OrdenDespacho">Orden de Despacho</string>
    <string name="quantity_hint">20</string>
</resources>