<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.GalleryFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reciclerId"
        android:layout_width="wrap_content"
        android:layout_height="419dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="2dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/recycler_view_item" />

    <TextView
        android:id="@+id/Ingreso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/archivo_semibold"
        android:text="@string/OrdenIngreso"
        android:textAlignment="textStart"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/archivo_semibold"
        android:text="@string/TotalLength"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/OrdenID"
        android:layout_width="43dp"
        android:layout_height="20dp"
        android:layout_marginTop="105dp"
        android:fontFamily="@font/archivo_bold"
        android:text="@string/OrdenIdent"
        app:layout_constraintStart_toEndOf="@+id/Ingreso"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/longitudPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/archivo_semibold"
        android:text="@string/LngitudPedidoO"
        app:layout_constraintStart_toEndOf="@+id/Total"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ScannerButton"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="210dp"
        android:layout_marginBottom="70dp"
        android:fontFamily="@font/archivo_bold"
        android:text="@string/ScannerB"
        app:icon="@drawable/baseline_qr_code_scanner_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.793"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/elevatedButton"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="70dp"
        android:fontFamily="@font/archivo_bold"
        android:text="@string/Confirmar"
        app:icon="@drawable/baseline_check_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>